build: add github actions

--- a/.gitignore
+++ b/.gitignore
@@ -277,7 +277,7 @@ venv.bak/
 .ropeproject
 
 # mkdocs documentation
-/site
+#/site
 
 # mypy
 .mypy_cache/
@@ -308,3 +308,4 @@ site
 # MacOS
 .DS_Store
 
+!/site/
