--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@redocly/cli": "^1.34.0",
     "@stoplight/prism-cli": "^5.12.0",
     "@stoplight/spectral-cli": "^6.14.3",
+    "netlify-cli": "^19.0.2",
     "openapi-format": "^1.25.0",
     "textlint": "^14.5.0",
     "textlint-filter-rule-allowlist": "^4.0.0",
