--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint-oas": "npx spectral lint ./docs/02_backend/interface/open-api/sample-oas.yaml --ruleset ./docs/02_backend/interface/open-api/.spectral.yaml",
     "format-oas": "npx openapi-format ./docs/02_backend/interface/open-api/sample-oas.yaml",
     "mock": "npx prism mock ./docs/02_backend/interface/open-api/sample-oas.yaml",
-    "gen-api-spec": "npx redocly build-docs ./docs/02_backend/interface/open-api/sample-oas.yaml -o ./docs/02_backend/interface/open-api/output/sample-oas.html && npx widdershins ./docs/02_backend/interface/open-api/sample-oas.yaml -o ./docs/02_backend/interface/open-api/README.md",
+    "gen-api-spec": "npx redocly build-docs ./docs/02_backend/interface/open-api/sample-oas.yaml -o ./docs/02_backend/interface/open-api/output/sample-oas.html",
     "run-docs": "poetry run mkdocs serve",
     "gen-docs": "poetry run mkdocs build",
     "build-plantuml": "cd ./docs/diagrams/plantuml && ./build.sh"
@@ -19,11 +19,11 @@
     "type": "git",
     "url": "git+https://github.com/semba-yui/sample-docs.git"
   },
-  "author": "",
+  "author": "Yui Semba",
   "bugs": {
     "url": "https://github.com/semba-yui/sample-docs/issues"
   },
-  "homepage": "https://github.com/semba-yui/sample-docs#readme",
+  "homepage": "https://yui-semba-sample-docs.netlify.app",
   "devDependencies": {
     "@redocly/cli": "^1.34.0",
     "@stoplight/prism-cli": "^5.12.0",
@@ -33,7 +33,6 @@
     "textlint": "^14.5.0",
     "textlint-filter-rule-allowlist": "^4.0.0",
     "textlint-filter-rule-comments": "^1.2.2",
-    "textlint-rule-preset-ja-technical-writing": "^12.0.2",
-    "widdershins": "^4.0.1"
+    "textlint-rule-preset-ja-technical-writing": "^12.0.2"
   }
 }
