--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,7 @@ tab_width = 4
 trim_trailing_whitespace = true
 
 [*.md]
+indent_size = 2
 trim_trailing_whitespace = false
 
 [{*.yaml,*.yml,*.json}]
