--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,8 +36,9 @@ theme:
   logo: images/logo.png
   favicon: images/logo.png
   features:
-    - navigation.sections
     - content.code.copy
+    - navigation.instant
+    - navigation.sections
     - navigation.tracking
     - navigation.tabs
     - navigation.tabs.sticky
@@ -48,20 +49,26 @@ theme:
 docs_dir: docs
 
 plugins:
-  search:
-    lang: 'ja'
-  tags:
-  git-revision-date-localized:
-    enable_creation_date: true
-  mermaid2:
-  glightbox:
+  - search:
+      lang: 'ja'
+  - tags
+  - mermaid2
+  - glightbox
+  - table-reader
+  - exclude:
+      glob:
+        - "**/.git/*"
+        - "**/node_modules/*"
+        - "**/diagrams/*"
 
 markdown_extensions:
   - admonition
   - pymdownx.details
   - footnotes
+  - codehilite
   - tables
   - pymdownx.emoji
+  - mdx_truly_sane_lists
 
 extra_javascript:
   - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js
