--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,17 @@
 [project]
-name = "demo-workflow-docs"
+name = "sample-mkdocs"
 version = "0.1.0"
-description = ""
+description = "サンプルドキュメント管理"
+authors = [
+    {name = "Yui Semba",email = "65758369+semba-yui@users.noreply.github.com"}
+]
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "mkdocs (>=1.6.1,<2.0.0)",
     "mkdocs-material (>=9.6.8,<10.0.0)"
 ]
+repository = "https://github.com/semba-yui/sample-mkdocs"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -17,18 +21,16 @@ build-backend = "poetry.core.masonry.api"
 package-mode = false
 
 [tool.poetry.group.dev.dependencies]
-pymarkdownlnt = "^0.9.29"
-mkdocs-build-plantuml-plugin = "^1.11.0"
-mkdocs-git-revision-date-localized-plugin = "^1.4.5"
-pymdown-extensions = "^10.14.3"
-mkdocs-mermaid2-plugin = "^1.2.1"
-mkdocs-drawio-exporter = "^0.10.1"
+mdx-truly-sane-lists = "^1.3"
 mkdocs-glightbox = "^0.4.0"
-neoteroi-mkdocs = "^1.1.0"
+mkdocs-mermaid2-plugin = "^1.2.1"
+mkdocs-build-plantuml-plugin = "^1.11.0"
+mkdocs-table-reader-plugin = "^3.1.0"
+mkdocs-exclude = "^1.0.2"
+pymarkdownlnt = "^0.9.29"
+pymdown-extensions = "^10.14.3"
+mkdocs-awesome-nav = "^3.1.1"
 
 [tool.poetry.scripts]
 serve = "mkdocs:serve"
 build = "mkdocs:build"
-
-[tool.poetry.requires-plugins]
-poetry-plugin-export = ">=1.8"
