--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
       "npm run oas:format"
     ],
     "*.md": [
-      "npm run docs:lint"
+      "npm run docs:lint",
+      "remark --output --silently-ignore --"
     ]
   },
   "homepage": "https://yui-semba-sample-mkdocs.netlify.app",
@@ -44,6 +45,11 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.0.0",
     "openapi-format": "^1.26.0",
+    "remark": "^15.0.1",
+    "remark-cli": "^12.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-preset-prettier": "^2.0.2",
+    "remark-toc": "^9.0.0",
     "textlint": "^14.7.1",
     "textlint-filter-rule-allowlist": "^4.0.0",
     "textlint-filter-rule-comments": "^1.2.2",
